results/SVCOMP/2-shot/log-Array2-2024_03_18_22_12_05.txt
public class Array2 {
    //@ requires unknown > 0 ==> \result <==> arr.length == 1 && arr[0] == 1;
    //@ requires unknown <= 0 ==> \result <==> arr.length == 0;
    public static boolean func(int unknown) {
        int[] arr;
        if (unknown > 0)
            arr = new int[1];
        else
            arr = new int[0];

        if (unknown > 0)
            arr[0] = 1;

        if (unknown > 0)
            return arr.length == 1 && arr[0] == 1;
        else
            return arr.length == 0;
    }
}
/home/max/Documents/JMLGPT/tmp/Array2.java:2: error: A \result expression may not be in a requires clause
    //@ requires unknown > 0 ==> \result <==> arr.length == 1 && arr[0] == 1;
                                  ^
/home/max/Documents/JMLGPT/tmp/Array2.java:2: error: cannot find symbol
    //@ requires unknown > 0 ==> \result <==> arr.length == 1 && arr[0] == 1;
                                              ^
  symbol:   variable arr
  location: class Array2
/home/max/Documents/JMLGPT/tmp/Array2.java:2: error: cannot find symbol
    //@ requires unknown > 0 ==> \result <==> arr.length == 1 && arr[0] == 1;
                                                                 ^
  symbol:   variable arr
  location: class Array2
/home/max/Documents/JMLGPT/tmp/Array2.java:3: error: A \result expression may not be in a requires clause
    //@ requires unknown <= 0 ==> \result <==> arr.length == 0;
                                   ^
/home/max/Documents/JMLGPT/tmp/Array2.java:3: error: cannot find symbol
    //@ requires unknown <= 0 ==> \result <==> arr.length == 0;
                                               ^
  symbol:   variable arr
  location: class Array2
5 errors

